--- a/app/assets/scss/_config.scss
+++ b/app/assets/scss/_config.scss
@@ -5,53 +5,77 @@
 
 $colors: (
   primary: (
-    base: #046198,
+    lighter: #501BE0,
+    base: #1BACE0,
+    darken: #2954CC,
   ),
   secondary: (
-    base: #ed731f,
+    base: #FFFF0A,
   ),
   tertiary: (
-    base: #a3ca5a,
+    base: #5ACC5A,
   ),
   light: (
-    base: #ffffff,
+    base: #F1F4F5,
   ),
   dark: (
-    base: #1a3240,
+    base: #212121,
   ),
-  danger      : #f85757,
-  success     : #00b412,
-  warning     : #fed82b,
+  danger      : #CC1833,
+  success     : #5ACC5A,
+  warning     : #FFFF0A,
 
 ) !default;
+
+@font-face {
+    font-family: 'Agrandir';
+    src: url('../fonts/Agrandir-Regular.eot');
+    src: url('../fonts/Agrandir-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Agrandir-Regular.woff2') format('woff2'),
+        url('../fonts/Agrandir-Regular.woff') format('woff'),
+        url('../fonts/Agrandir-Regular.svg#Agrandir-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Agrandir';
+    src: url('../fonts/Agrandir-Italic.eot');
+    src: url('../fonts/Agrandir-Italic.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Agrandir-Italic.woff2') format('woff2'),
+        url('../fonts/Agrandir-Italic.woff') format('woff'),
+        url('../fonts/Agrandir-Italic.svg#Agrandir-Italic') format('svg');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Agrandir';
+    src: url('../fonts/Agrandir-TextBold.eot');
+    src: url('../fonts/Agrandir-TextBold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Agrandir-TextBold.woff2') format('woff2'),
+        url('../fonts/Agrandir-TextBold.woff') format('woff'),
+        url('../fonts/Agrandir-TextBold.svg#Agrandir-TextBold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+
 
 /// @group    Fontes
 
 $font-config: (
-  thin: (
-    name: 'Roboto',
-    weight: 100
-  ),
-  light: (
-    name: 'Roboto',
-    weight: 300
-  ),
   base: (
-    name: 'Roboto',
+    name: 'Agrandir',
     weight: 400
   ),
-  medium: (
-    name: 'Roboto',
-    weight: 500
-  ),
   bold: (
-    name: 'Roboto',
+    name: 'Agrandir',
     weight: 700
   ),
-  black: (
-    name: 'Roboto',
-    weight: 900
-  )
 ) !default;
 
 $font-fallback: Tahoma, Verdana, Segoe, sans-serif !default;
