--- a/app/assets/scss/elements/_main.scss
+++ b/app/assets/scss/elements/_main.scss
@@ -1,3 +1,13 @@
 main {
+    @include responsive(large) {
+        padding-top: 66px;
+    }
 
+    position: relative;
+    z-index: 1;
+
+    margin-top: -66px;
+    padding-top: 85px;
+
+    min-height: calc(100vh - 747px);
 }
