--- a/app/assets/scss/elements/_header.scss
+++ b/app/assets/scss/elements/_header.scss
@@ -3,7 +3,7 @@ header {
         margin: space(g);
     }
 
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 3;
