--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -224,7 +224,7 @@ button.btn {
     [type="submit"].btn.btn-primary:hover,
     button.btn.btn-primary:hover {
       color: #F1F4F5;
-      background-color: #106685; }
+      background-color: #1689b2; }
   a.btn.btn-tertiary,
   [type="submit"].btn.btn-tertiary,
   button.btn.btn-tertiary {
@@ -235,7 +235,25 @@ button.btn {
     [type="submit"].btn.btn-tertiary:hover,
     button.btn.btn-tertiary:hover {
       color: #F1F4F5;
-      background-color: #2d932d; }
+      background-color: #39ba39; }
+  a.btn.btn-light,
+  [type="submit"].btn.btn-light,
+  button.btn.btn-light {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #1BACE0;
+    background-color: #F1F4F5;
+    text-transform: inherit; }
+    a.btn.btn-light:hover,
+    [type="submit"].btn.btn-light:hover,
+    button.btn.btn-light:hover {
+      color: #1BACE0;
+      background-color: #d3dde0; }
+    a.btn.btn-light svg,
+    [type="submit"].btn.btn-light svg,
+    button.btn.btn-light svg {
+      stroke: #1BACE0; }
   a.btn:hover, a.btn:active, a.btn:focus,
   [type="submit"].btn:hover,
   [type="submit"].btn:active,
@@ -417,6 +435,17 @@ main {
 /*------------------------------------*\
     SECTION
 \*------------------------------------*/
+section .sectionTitle span {
+  font-family: "Agrandir";
+  font-weight: bold;
+  font-stretch: normal;
+  display: inline-block;
+  padding: 4px 8px;
+  font-size: 1rem;
+  text-transform: uppercase;
+  color: #1BACE0;
+  background-color: #FFFF0A; }
+
 section#home {
   position: relative;
   display: flex;
@@ -459,8 +488,95 @@ section#home {
     FOOTER
 \*------------------------------------*/
 footer .footer-content {
+  position: relative;
   min-height: 667px;
-  background-color: #1BACE0; }
+  padding: 112px 0;
+  background-color: #1BACE0;
+  color: #F1F4F5; }
+  footer .footer-content:before {
+    display: inline-block;
+    width: 476px;
+    height: 476px;
+    content: '';
+    background-image: url("../images/sprite.png");
+    background-position: 0px 0px;
+    width: 476px;
+    height: 476px;
+    position: absolute;
+    bottom: 0;
+    left: 0; }
+  footer .footer-content:after {
+    display: inline-block;
+    width: 476px;
+    height: 476px;
+    content: '';
+    background-image: url("../images/sprite.png");
+    background-position: 0px 0px;
+    width: 476px;
+    height: 476px;
+    position: absolute;
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    bottom: 0;
+    right: 0; }
+  footer .footer-content .footerTitle span {
+    display: inline-block;
+    padding: 4px 8px;
+    font-size: 1rem;
+    text-transform: uppercase;
+    color: #1BACE0;
+    background-color: #FFFF0A; }
+  footer .footer-content .newsletterContent {
+    color: #F1F4F5; }
+    footer .footer-content .newsletterContent .titleNewsLetter {
+      font-family: "Agrandir";
+      font-weight: bold;
+      font-stretch: semi-expanded;
+      margin-top: 24px;
+      font-size: 3rem;
+      line-height: 1;
+      letter-spacing: 0.02em; }
+      footer .footer-content .newsletterContent .titleNewsLetter ~ p {
+        margin-top: 24px;
+        font-size: 1.125rem;
+        line-height: 1; }
+  footer .footer-content .footerMenu ul li {
+    display: inline-block;
+    width: 49%;
+    margin: 0 0 32px;
+    font-size: 1rem;
+    line-height: 1;
+    text-transform: uppercase;
+    color: #F1F4F5; }
+    footer .footer-content .footerMenu ul li a {
+      color: inherit; }
+      footer .footer-content .footerMenu ul li a:hover, footer .footer-content .footerMenu ul li a:active, footer .footer-content .footerMenu ul li a:focus {
+        font-family: "Agrandir";
+        font-weight: bold;
+        font-stretch: normal;
+        color: #FFFF0A; }
+  footer .footer-content .socialMenu nav ul {
+    display: flex; }
+    footer .footer-content .socialMenu nav ul li {
+      position: relative;
+      margin-left: 16px;
+      margin-bottom: inherit;
+      width: 50px;
+      height: 50px;
+      background-color: #F1F4F5;
+      color: #1BACE0;
+      border-radius: 50%; }
+      footer .footer-content .socialMenu nav ul li:hover, footer .footer-content .socialMenu nav ul li:active, footer .footer-content .socialMenu nav ul li:focus {
+        background-color: #FFFF0A; }
+      footer .footer-content .socialMenu nav ul li a {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center; }
+        footer .footer-content .socialMenu nav ul li a:hover, footer .footer-content .socialMenu nav ul li a:active, footer .footer-content .socialMenu nav ul li a:focus {
+          text-decoration: none; }
 
 footer .footer-logos {
   display: flex;
