--- a/app/assets/scss/elements/_buttons.scss
+++ b/app/assets/scss/elements/_buttons.scss
@@ -13,7 +13,7 @@ button{
 
 			&:hover {
 				color: color(light);
-				background-color: darken($color: color(primary), $amount: 20);
+				background-color: darken($color: color(primary), $amount: 10);
 			}
 		}
 
@@ -25,7 +25,28 @@ button{
 
 			&:hover {
 				color: color(light);
-				background-color: darken($color: color(tertiary), $amount: 20);
+				background-color: darken($color: color(tertiary), $amount: 10);
+			}
+		}
+
+
+		&.btn-light {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			color: color(primary);
+
+			background-color: color(light);
+			text-transform: inherit;
+
+			&:hover {
+				color: color(primary);
+				background-color: darken($color: color(light), $amount: 10);
+			}
+
+			svg {
+				stroke: color(primary);
 			}
 		}
 
