Corrigindo as fontes e terminando o footer

--- a/app/assets/scss/elements/_footer.scss
+++ b/app/assets/scss/elements/_footer.scss
@@ -30,6 +30,8 @@ footer {
 
         .footerTitle {
             span {
+                @include font(narrowerBold);
+
                 display: inline-block;
                 padding: space(s) space(p);
 
