--- a/app/assets/scss/elements/_header.scss
+++ b/app/assets/scss/elements/_header.scss
@@ -140,6 +140,8 @@ header {
                         }
 
                         &.btn {
+                            padding: space(p) space(g);
+
                             font-size: font-size(medium);
                         }
 
