--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -38,15 +38,6 @@
 
 @font-face {
   font-family: 'Agrandir';
-  src: url("../fonts/Agrandir-ThinItalic.eot");
-  src: url("../fonts/Agrandir-ThinItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/Agrandir-ThinItalic.woff2") format("woff2"), url("../fonts/Agrandir-ThinItalic.woff") format("woff");
-  font-weight: normal;
-  font-style: italic;
-  font-display: swap;
-  font-stretch: condensed; }
-
-@font-face {
-  font-family: 'Agrandir';
   src: url("../fonts/Agrandir-TightBlack.eot");
   src: url("../fonts/Agrandir-TightBlack.eot?#iefix") format("embedded-opentype"), url("../fonts/Agrandir-TightBlack.woff2") format("woff2"), url("../fonts/Agrandir-TightBlack.woff") format("woff");
   font-weight: bold;
@@ -65,8 +56,8 @@
 
 @font-face {
   font-family: 'Agrandir';
-  src: url("../fonts/Agrandir-NarrowBlack.eot");
-  src: url("../fonts/Agrandir-NarrowBlack.eot?#iefix") format("embedded-opentype"), url("../fonts/Agrandir-NarrowBlack.woff2") format("woff2"), url("../fonts/Agrandir-NarrowBlack.woff") format("woff");
+  src: url("../fonts/Agrandir-NarrowBold.eot");
+  src: url("../fonts/Agrandir-NarrowBold.eot?#iefix") format("embedded-opentype"), url("../fonts/Agrandir-NarrowBold.woff2") format("woff2"), url("../fonts/Agrandir-NarrowBold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -74,18 +65,18 @@
 
 @font-face {
   font-family: 'Agrandir';
-  src: url("../fonts/Agrandir-WideLight.eot");
-  src: url("../fonts/Agrandir-WideLight.eot?#iefix") format("embedded-opentype"), url("../fonts/Agrandir-WideLight.woff2") format("woff2"), url("../fonts/Agrandir-WideLight.woff") format("woff");
-  font-weight: bold;
+  src: url("../fonts/Agrandir-Wide.eot");
+  src: url("../fonts/Agrandir-Wide.eot?#iefix") format("embedded-opentype"), url("../fonts/Agrandir-Wide.woff2") format("woff2"), url("../fonts/Agrandir-Wide.woff") format("woff");
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
   font-stretch: semi-expanded; }
 
 @font-face {
   font-family: 'Agrandir';
-  src: url("../fonts/Agrandir-WideBlackItalic.eot");
-  src: url("../fonts/Agrandir-WideBlackItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/Agrandir-WideBlackItalic.woff2") format("woff2"), url("../fonts/Agrandir-WideBlackItalic.woff") format("woff");
-  font-weight: bolder;
+  src: url("../fonts/Agrandir-WideBold.eot");
+  src: url("../fonts/Agrandir-WideBold.eot?#iefix") format("embedded-opentype"), url("../fonts/Agrandir-WideBold.woff2") format("woff2"), url("../fonts/Agrandir-WideBold.woff") format("woff");
+  font-weight: bold;
   font-style: normal;
   font-display: swap;
   font-stretch: semi-expanded; }
@@ -96,15 +87,6 @@
   src: url("../fonts/Agrandir-Grand.eot?#iefix") format("embedded-opentype"), url("../fonts/Agrandir-Grand.woff2") format("woff2"), url("../fonts/Agrandir-Grand.woff") format("woff");
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
-  font-stretch: ultra-expanded; }
-
-@font-face {
-  font-family: 'Agrandir';
-  src: url("../fonts/Agrandir-GrandItalic.eot");
-  src: url("../fonts/Agrandir-GrandItalic.eot?#iefix") format("embedded-opentype"), url("../fonts/Agrandir-GrandItalic.woff2") format("woff2"), url("../fonts/Agrandir-GrandItalic.woff") format("woff");
-  font-weight: normal;
-  font-style: italic;
   font-display: swap;
   font-stretch: ultra-expanded; }
 
@@ -367,6 +349,7 @@ header {
             header .menu nav ul li a:hover {
               text-decoration: none; }
             header .menu nav ul li a.btn {
+              padding: 8px 32px;
               font-size: 1rem; }
     header .menu .nav-button {
       position: relative;
@@ -520,6 +503,9 @@ footer .footer-content {
     bottom: 0;
     right: 0; }
   footer .footer-content .footerTitle span {
+    font-family: "Agrandir";
+    font-weight: bold;
+    font-stretch: narrower;
     display: inline-block;
     padding: 4px 8px;
     font-size: 1rem;
