--- a/app/assets/scss/_config.scss
+++ b/app/assets/scss/_config.scss
@@ -78,18 +78,6 @@ $colors: (
 
 @font-face {
   font-family: 'Agrandir';
-  src: url('../fonts/Agrandir-ThinItalic.eot');
-  src: url('../fonts/Agrandir-ThinItalic.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Agrandir-ThinItalic.woff2') format('woff2'),
-      url('../fonts/Agrandir-ThinItalic.woff') format('woff');
-  font-weight: normal;
-  font-style: italic;
-  font-display: swap;
-  font-stretch: condensed;
-}
-
-@font-face {
-  font-family: 'Agrandir';
   src: url('../fonts/Agrandir-TightBlack.eot');
   src: url('../fonts/Agrandir-TightBlack.eot?#iefix') format('embedded-opentype'),
       url('../fonts/Agrandir-TightBlack.woff2') format('woff2'),
@@ -114,10 +102,10 @@ $colors: (
 
 @font-face {
   font-family: 'Agrandir';
-  src: url('../fonts/Agrandir-NarrowBlack.eot');
-  src: url('../fonts/Agrandir-NarrowBlack.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Agrandir-NarrowBlack.woff2') format('woff2'),
-      url('../fonts/Agrandir-NarrowBlack.woff') format('woff');
+  src: url('../fonts/Agrandir-NarrowBold.eot');
+  src: url('../fonts/Agrandir-NarrowBold.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/Agrandir-NarrowBold.woff2') format('woff2'),
+      url('../fonts/Agrandir-NarrowBold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -126,11 +114,11 @@ $colors: (
 
 @font-face {
   font-family: 'Agrandir';
-  src: url('../fonts/Agrandir-WideLight.eot');
-  src: url('../fonts/Agrandir-WideLight.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Agrandir-WideLight.woff2') format('woff2'),
-      url('../fonts/Agrandir-WideLight.woff') format('woff');
-  font-weight: bold;
+  src: url('../fonts/Agrandir-Wide.eot');
+  src: url('../fonts/Agrandir-Wide.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/Agrandir-Wide.woff2') format('woff2'),
+      url('../fonts/Agrandir-Wide.woff') format('woff');
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
   font-stretch: semi-expanded;
@@ -138,11 +126,11 @@ $colors: (
 
 @font-face {
   font-family: 'Agrandir';
-  src: url('../fonts/Agrandir-WideBlackItalic.eot');
-  src: url('../fonts/Agrandir-WideBlackItalic.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Agrandir-WideBlackItalic.woff2') format('woff2'),
-      url('../fonts/Agrandir-WideBlackItalic.woff') format('woff');
-  font-weight: bolder;
+  src: url('../fonts/Agrandir-WideBold.eot');
+  src: url('../fonts/Agrandir-WideBold.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/Agrandir-WideBold.woff2') format('woff2'),
+      url('../fonts/Agrandir-WideBold.woff') format('woff');
+  font-weight: bold;
   font-style: normal;
   font-display: swap;
   font-stretch: semi-expanded;
@@ -156,18 +144,6 @@ $colors: (
       url('../fonts/Agrandir-Grand.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
-  font-stretch: ultra-expanded;
-}
-
-@font-face {
-  font-family: 'Agrandir';
-  src: url('../fonts/Agrandir-GrandItalic.eot');
-  src: url('../fonts/Agrandir-GrandItalic.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/Agrandir-GrandItalic.woff2') format('woff2'),
-      url('../fonts/Agrandir-GrandItalic.woff') format('woff');
-  font-weight: normal;
-  font-style: italic;
   font-display: swap;
   font-stretch: ultra-expanded;
 }
