--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -259,7 +259,7 @@ button.btn-lg {
     HEADER
 \*------------------------------------*/
 header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 3;
@@ -356,7 +356,7 @@ header {
       z-index: 99999;
       display: inherit;
       padding: 8px;
-      background-color: #1BACE0;
+      background-color: transparent;
       border: 0; }
       @media (min-width: 79.9375em) {
         header .menu .nav-button {
@@ -371,7 +371,9 @@ header {
       header .menu .nav-button.is-active {
         position: fixed;
         top: 18px;
-        right: 24px; }
+        right: 24px;
+        background-color: #1BACE0;
+        transition: .5; }
 
 /*------------------------------------*\
     BODY
@@ -432,12 +434,17 @@ section .sectionTitle span {
 section#home {
   position: relative;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   min-height: 740px;
   padding-top: 56px;
-  background-image: url(../images/img-highight-01.png);
+  background-image: url(../images/img-highight-mobile-01.png);
   background-size: cover;
   background-position: top center; }
+  @media (min-width: 79.9375em) {
+    section#home {
+      align-items: center;
+      padding-top: 56px;
+      background-image: url(../images/img-highight-01.png); } }
   section#home:before {
     display: inline-block;
     width: 100%;
@@ -452,16 +459,27 @@ section#home {
   section#home .highlight-text {
     position: relative;
     z-index: 2;
-    width: 570px;
-    height: 300px;
-    color: #F1F4F5; }
+    width: 100%;
+    height: auto;
+    margin: 32px 0 0;
+    color: #F1F4F5;
+    text-align: center; }
+    @media (min-width: 79.9375em) {
+      section#home .highlight-text {
+        margin: inherit;
+        width: 570px;
+        height: 300px;
+        text-align: left; } }
     section#home .highlight-text h2 {
       font-family: "Agrandir";
       font-weight: bold;
       font-stretch: semi-expanded;
-      font-size: 3.5rem;
+      font-size: 2.25rem;
       line-height: 1;
       letter-spacing: 0.02em; }
+      @media (min-width: 79.9375em) {
+        section#home .highlight-text h2 {
+          font-size: 3.5rem; } }
       section#home .highlight-text h2 + p {
         margin-top: 24px;
         font-size: 1.125rem;
@@ -472,36 +490,47 @@ section#home {
 \*------------------------------------*/
 footer .footer-content {
   position: relative;
-  min-height: 667px;
-  padding: 112px 0;
+  z-index: 1;
+  min-height: inherit;
+  padding: 64px 0;
   background-color: #1BACE0;
-  color: #F1F4F5; }
-  footer .footer-content:before {
-    display: inline-block;
-    width: 476px;
-    height: 476px;
-    content: '';
-    background-image: url("../images/sprite.png");
-    background-position: 0px 0px;
-    width: 476px;
-    height: 476px;
-    position: absolute;
-    bottom: 0;
-    left: 0; }
-  footer .footer-content:after {
-    display: inline-block;
-    width: 476px;
-    height: 476px;
-    content: '';
-    background-image: url("../images/sprite.png");
-    background-position: 0px 0px;
-    width: 476px;
-    height: 476px;
-    position: absolute;
-    -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);
-    bottom: 0;
-    right: 0; }
+  color: #F1F4F5;
+  text-align: center; }
+  @media (min-width: 79.9375em) {
+    footer .footer-content {
+      min-height: 667px;
+      padding: 112px 0;
+      text-align: left; } }
+  @media (min-width: 79.9375em) {
+    footer .footer-content:before {
+      display: inline-block;
+      width: 476px;
+      height: 476px;
+      content: '';
+      background-image: url("../images/sprite.png");
+      background-position: 0px 0px;
+      width: 476px;
+      height: 476px;
+      position: absolute;
+      z-index: 0;
+      bottom: 0;
+      left: 0; } }
+  @media (min-width: 79.9375em) {
+    footer .footer-content:after {
+      display: inline-block;
+      width: 476px;
+      height: 476px;
+      content: '';
+      background-image: url("../images/sprite.png");
+      background-position: 0px 0px;
+      width: 476px;
+      height: 476px;
+      position: absolute;
+      -webkit-transform: scaleX(-1);
+      transform: scaleX(-1);
+      z-index: 0;
+      bottom: 0;
+      right: 0; } }
   footer .footer-content .footerTitle span {
     font-family: "Agrandir";
     font-weight: bold;
@@ -513,62 +542,89 @@ footer .footer-content {
     color: #1BACE0;
     background-color: #FFFF0A; }
   footer .footer-content .newsletterContent {
-    color: #F1F4F5; }
+    position: relative;
+    z-index: 1;
+    color: #F1F4F5;
+    margin: 0 0 56px; }
+    @media (min-width: 79.9375em) {
+      footer .footer-content .newsletterContent {
+        margin: inherit; } }
     footer .footer-content .newsletterContent .titleNewsLetter {
       font-family: "Agrandir";
       font-weight: bold;
       font-stretch: semi-expanded;
       margin-top: 24px;
-      font-size: 3rem;
+      font-size: 2.25rem;
       line-height: 1;
       letter-spacing: 0.02em; }
+      @media (min-width: 79.9375em) {
+        footer .footer-content .newsletterContent .titleNewsLetter {
+          font-size: 3rem; } }
       footer .footer-content .newsletterContent .titleNewsLetter ~ p {
         margin-top: 24px;
         font-size: 1.125rem;
         line-height: 1; }
-  footer .footer-content .footerMenu ul li {
-    display: inline-block;
-    width: 49%;
-    margin: 0 0 32px;
-    font-size: 1rem;
-    line-height: 1;
-    text-transform: uppercase;
-    color: #F1F4F5; }
-    footer .footer-content .footerMenu ul li a {
-      color: inherit; }
-      footer .footer-content .footerMenu ul li a:hover, footer .footer-content .footerMenu ul li a:active, footer .footer-content .footerMenu ul li a:focus {
-        font-family: "Agrandir";
-        font-weight: bold;
-        font-stretch: normal;
-        color: #FFFF0A; }
-  footer .footer-content .socialMenu nav ul {
-    display: flex; }
-    footer .footer-content .socialMenu nav ul li {
-      position: relative;
-      margin-left: 16px;
-      margin-bottom: inherit;
-      width: 50px;
-      height: 50px;
-      background-color: #F1F4F5;
-      color: #1BACE0;
-      border-radius: 50%; }
-      footer .footer-content .socialMenu nav ul li:hover, footer .footer-content .socialMenu nav ul li:active, footer .footer-content .socialMenu nav ul li:focus {
-        background-color: #FFFF0A; }
-      footer .footer-content .socialMenu nav ul li a {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center; }
-        footer .footer-content .socialMenu nav ul li a:hover, footer .footer-content .socialMenu nav ul li a:active, footer .footer-content .socialMenu nav ul li a:focus {
-          text-decoration: none; }
+  footer .footer-content .footerMenu {
+    position: relative;
+    z-index: 1; }
+    footer .footer-content .footerMenu ul li {
+      display: inline-block;
+      width: 100%;
+      margin: 0 0 32px;
+      font-size: 1rem;
+      line-height: 1;
+      text-transform: uppercase;
+      color: #F1F4F5; }
+      @media (min-width: 79.9375em) {
+        footer .footer-content .footerMenu ul li {
+          width: 49%; } }
+      footer .footer-content .footerMenu ul li a {
+        color: inherit; }
+        footer .footer-content .footerMenu ul li a:hover, footer .footer-content .footerMenu ul li a:active, footer .footer-content .footerMenu ul li a:focus {
+          font-family: "Agrandir";
+          font-weight: bold;
+          font-stretch: normal;
+          color: #FFFF0A; }
+  footer .footer-content .socialMenu {
+    position: relative;
+    z-index: 1; }
+    footer .footer-content .socialMenu nav ul {
+      display: flex;
+      justify-content: center;
+      margin: 32px 0 0; }
+      @media (min-width: 79.9375em) {
+        footer .footer-content .socialMenu nav ul {
+          justify-content: inherit; } }
+      footer .footer-content .socialMenu nav ul li {
+        position: relative;
+        margin-left: 16px;
+        margin-bottom: inherit;
+        width: 50px;
+        height: 50px;
+        background-color: #F1F4F5;
+        color: #1BACE0;
+        border-radius: 50%; }
+        footer .footer-content .socialMenu nav ul li:hover, footer .footer-content .socialMenu nav ul li:active, footer .footer-content .socialMenu nav ul li:focus {
+          background-color: #FFFF0A; }
+        footer .footer-content .socialMenu nav ul li a {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center; }
+          footer .footer-content .socialMenu nav ul li a:hover, footer .footer-content .socialMenu nav ul li a:active, footer .footer-content .socialMenu nav ul li a:focus {
+            text-decoration: none; }
 
 footer .footer-logos {
   display: flex;
   align-items: center;
   min-height: 80px;
+  padding-bottom: 32px;
   background-color: #2954CC; }
+  @media (min-width: 79.9375em) {
+    footer .footer-logos {
+      padding-bottom: inherit; } }
   footer .footer-logos h6.logo {
     overflow: hidden;
     text-indent: -9999px;
@@ -576,6 +632,7 @@ footer .footer-logos {
     overflow: inherit;
     width: 170px;
     height: 30px;
+    margin: 32px auto;
     font-size: 0; }
     @media (min-width: 79.9375em) {
       footer .footer-logos h6.logo {
@@ -597,13 +654,22 @@ footer .footer-logos {
   footer .footer-logos ul {
     display: flex;
     align-items: center;
-    justify-content: end; }
+    justify-content: end;
+    flex-direction: column;
+    text-align: center; }
+    @media (min-width: 79.9375em) {
+      footer .footer-logos ul {
+        flex-direction: row;
+        text-align: inherit; } }
     footer .footer-logos ul li {
-      margin: 0 16px;
+      margin: 8px 16px;
       width: 270px;
       font-size: 0.75rem;
       line-height: 1;
       color: #F1F4F5; }
+      @media (min-width: 79.9375em) {
+        footer .footer-logos ul li {
+          margin: 0 16px; } }
       footer .footer-logos ul li.uniao {
         overflow: hidden;
         text-indent: -9999px;
