--- a/app/assets/scss/elements/_header.scss
+++ b/app/assets/scss/elements/_header.scss
@@ -3,7 +3,7 @@ header {
         margin: space(g);
     }
 
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     z-index: 3;
@@ -162,7 +162,7 @@ header {
             display: inherit;
             padding: space(p);
 
-            background-color: color(primary);
+            background-color: transparent;
             border: 0;
 
             .hamburger-inner,
@@ -178,6 +178,9 @@ header {
                 position: fixed;
                 top: 18px;
                 right: 24px;
+
+                background-color: color(primary);
+                transition: .5;
             }
         }
     }
