--- a/app/assets/scss/elements/_section.scss
+++ b/app/assets/scss/elements/_section.scss
@@ -15,14 +15,21 @@ section {
     }
 
     &#home {
+        @include responsive(large) {
+            align-items: center;
+            padding-top: space(xg);
+
+            background-image: url(../images/img-highight-01.png);
+        }
+
         position: relative;
 
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         min-height: 740px;
         padding-top: space(xg);
 
-        background-image: url(../images/img-highight-01.png);
+        background-image: url(../images/img-highight-mobile-01.png);
         background-size: cover;
         background-position: top center;
 
@@ -39,18 +46,31 @@ section {
         }
 
         .highlight-text {
+            @include responsive(large) {
+                margin: inherit;
+                width: 570px;
+                height: 300px;
+
+                text-align: left;
+            }
+
             position: relative;
             z-index: 2;
 
-            width: 570px;
-            height: 300px;
+            width: 100%;
+            height: auto;
+            margin: space(g) 0 0;
 
             color: color(light);
+            text-align: center;
 
             h2 {
+                @include responsive(large) {
+                    font-size: font-size(xxxxbig);
+                }
                 @include font(semiExpanded);
 
-                font-size: font-size(xxxxbig);
+                font-size: font-size(xxbig);
                 line-height: 1;
                 letter-spacing: 0.02em;
 
