--- a/app/assets/scss/elements/_typography.scss
+++ b/app/assets/scss/elements/_typography.scss
@@ -1,16 +1,49 @@
-h1 {}
+h1 {
+   @include font(bold);
 
-h2 {}
+    font-size: font-size(xxxxbig);
+    line-height: 1;
+}
 
-h3 {}
+h2 {
+   @include font(bold);
 
-h4 {}
+    font-size: font-size(xxxbig);
+    line-height: 1;
+}
 
-h5 {}
+h3 {
+   @include font(bold);
 
-h6 {}
+    font-size: font-size(xxxbig);
+    line-height: 1;
+}
+
+h4 {
+   @include font(bold);
+
+    font-size: font-size(xbig);
+    line-height: 1;
+}
+
+h5 {
+   @include font(bold);
+
+    font-size: font-size(big);
+    line-height: 1;
+}
+
+h6 {
+   @include font(bold);
+
+    font-size: font-size(large);
+    line-height: 1;
+}
 
 p {
+    margin: 0 0 space(g);
+    font-size: font-size(large);
+    line-height: 1.5;
 }
 
 hr {}
