--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -575,6 +575,46 @@ section#bio {
           right: 85px;
           transform: scale(0.8); } }
 
+section#mobiliza .mobilizaContainer {
+  position: relative;
+  padding: 16px 16px 0;
+  color: #F1F4F5;
+  text-align: center;
+  background-color: #1BACE0; }
+  @media (min-width: 79.9375em) {
+    section#mobiliza .mobilizaContainer {
+      padding: 0;
+      background-image: url(../images/bg-zap.png);
+      background-size: cover;
+      text-align: left; } }
+  section#mobiliza .mobilizaContainer svg {
+    position: absolute;
+    top: -64px;
+    right: -26px;
+    transform: scale(0.7);
+    z-index: -1; }
+    @media (min-width: 79.9375em) {
+      section#mobiliza .mobilizaContainer svg {
+        top: -85px;
+        right: 85px;
+        transform: scale(0.8); } }
+
+section#mobiliza h4 {
+  font-family: "Agrandir";
+  font-weight: bold;
+  font-stretch: semi-expanded;
+  position: relative;
+  z-index: 1;
+  font-size: 2rem;
+  line-height: 1;
+  letter-spacing: 0.02em; }
+  @media (min-width: 79.9375em) {
+    section#mobiliza h4 {
+      font-size: 2.25rem; } }
+
+section#mobiliza img {
+  margin: 0 0 -8px; }
+
 /*------------------------------------*\
     FOOTER
 \*------------------------------------*/
