terminando a area de recomendação

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -374,7 +374,8 @@ header {
         z-index: 99998;
         display: inherit;
         width: 100%;
-        height: 100vh; }
+        height: 100vh;
+        background-color: #fff; }
       header .menu nav ul {
         display: flex;
         align-items: center; }
@@ -432,7 +433,8 @@ html {
   width: 100%;
   -webkit-overflow-scrolling: touch;
   overflow-x: hidden;
-  font-size: 16px; }
+  font-size: 16px;
+  background-color: #fff; }
   @media (min-width: 79.9375em) {
     html {
       -webkit-overflow-scrolling: inherit;
@@ -444,7 +446,8 @@ body {
   font-stretch: normal;
   width: 100%;
   -webkit-overflow-scrolling: touch;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  background-color: #fff; }
   @media (min-width: 79.9375em) {
     body {
       -webkit-overflow-scrolling: inherit;
@@ -577,6 +580,7 @@ section#bio {
 
 section#mobiliza .mobilizaContainer {
   position: relative;
+  z-index: 0;
   padding: 16px 16px 0;
   color: #F1F4F5;
   text-align: center;
@@ -590,13 +594,13 @@ section#mobiliza .mobilizaContainer {
   section#mobiliza .mobilizaContainer svg {
     position: absolute;
     top: -64px;
-    right: -26px;
+    right: -86px;
     transform: scale(0.7);
-    z-index: -1; }
+    z-index: 1; }
     @media (min-width: 79.9375em) {
       section#mobiliza .mobilizaContainer svg {
         top: -85px;
-        right: 85px;
+        right: -85px;
         transform: scale(0.8); } }
 
 section#mobiliza h4 {
@@ -614,6 +618,58 @@ section#mobiliza h4 {
 
 section#mobiliza img {
   margin: 0 0 -8px; }
+
+section#reconhecimentos h4 {
+  font-family: "Agrandir";
+  font-weight: bold;
+  font-stretch: semi-expanded;
+  position: relative;
+  z-index: 1;
+  margin: 0 0 32px;
+  font-size: 2rem;
+  line-height: 1;
+  letter-spacing: 0.02em;
+  color: #1BACE0; }
+  @media (min-width: 79.9375em) {
+    section#reconhecimentos h4 {
+      font-size: 2.25rem; } }
+  section#reconhecimentos h4 svg {
+    position: absolute;
+    top: -35px;
+    right: -85px;
+    transform: scale(0.7);
+    z-index: -1; }
+    @media (min-width: 79.9375em) {
+      section#reconhecimentos h4 svg {
+        top: -45px;
+        right: 220px;
+        transform: scale(0.8); } }
+
+section#reconhecimentos .textContainer {
+  flex-flow: nowrap;
+  overflow: auto; }
+  @media (min-width: 79.9375em) {
+    section#reconhecimentos .textContainer {
+      flex-flow: wrap;
+      overflow: inherit; } }
+
+section#reconhecimentos .img-fluid {
+  min-width: 320px; }
+
+section#reconhecimentos .textContent {
+  font-family: "Agrandir";
+  font-weight: bold;
+  font-stretch: semi-expanded;
+  min-height: 90px;
+  margin: -8px 0 16px;
+  padding: 16px 32px;
+  background-color: #F1F4F5; }
+  section#reconhecimentos .textContent p {
+    margin: 0;
+    font-size: 1.125rem;
+    line-height: 1;
+    letter-spacing: .5;
+    color: #1BACE0; }
 
 /*------------------------------------*\
     FOOTER
