--- a/app/assets/scss/elements/_body.scss
+++ b/app/assets/scss/elements/_body.scss
@@ -11,6 +11,8 @@ html {
     overflow-x: hidden;
 
     font-size: (font-size(medium, $rem: false));
+
+    background-color: color(light, lighter);
 }
 
 body {
@@ -24,5 +26,7 @@ body {
 
     -webkit-overflow-scrolling: touch;
     overflow-x: hidden;
+
+    background-color: color(light, lighter);
 
 }
