--- a/app/assets/scss/elements/_section.scss
+++ b/app/assets/scss/elements/_section.scss
@@ -153,6 +153,7 @@ section {
             }
 
             position: relative;
+            z-index: 0;
 
             padding: space(base) space(base) 0;
 
@@ -164,15 +165,15 @@ section {
             svg {
                 @include responsive(large) {
                     top: -85px;
-                    right: 85px;
+                    right: -85px;
                     transform: scale(.8);
                 }
 
                 position: absolute;
                 top: -64px;
-                right: -26px;
+                right: -86px;
                 transform: scale(0.7);
-                z-index: -1;
+                z-index: 1;
 
             }
         }
@@ -194,6 +195,74 @@ section {
 
         img {
             margin: 0 0 (- space(p));
+        }
+    }
+
+    &#reconhecimentos {
+        h4 {
+            @include responsive(large) {
+                font-size: font-size(xxbig);
+            }
+
+            @include font(semiExpanded);
+
+            position: relative;
+            z-index: 1;
+
+            margin: 0 0 space(g);
+
+            font-size: font-size(xbig);
+            line-height: 1;
+            letter-spacing: 0.02em;
+            color: color(primary);
+
+            svg {
+                @include responsive(large) {
+                    top: -45px;
+                    right: 220px;
+                    transform: scale(0.8);
+                }
+
+                position: absolute;
+                top: -35px;
+                right: -85px;
+                transform: scale(0.7);
+                z-index: -1;
+
+            }
+        }
+
+        .textContainer {
+            @include responsive(large) {
+                flex-flow: wrap;
+                overflow: inherit;
+            }
+
+            flex-flow: nowrap;
+            overflow: auto;
+        }
+
+        .img-fluid {
+            min-width: 320px;
+        }
+
+        .textContent {
+            @include font(semiExpanded);
+
+            min-height: 90px;
+            margin: (- space(p)) 0 space(base);
+            padding: space(base) space(g);
+
+            background-color: color(light);
+
+            p {
+                margin: 0;
+
+                font-size: font-size(large);
+                line-height: 1;
+                letter-spacing: .5;
+                color: color(primary);
+            }
         }
     }
 }
