--- a/app/assets/scss/elements/_buttons.scss
+++ b/app/assets/scss/elements/_buttons.scss
@@ -3,9 +3,14 @@ a,
 button{
 	&.btn {
 		padding: space(p) space(base);
+		border: 0;
 		border-radius: 2px;
 
 		&.btn-primary {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
 			color: color(light);
 
 			background-color: color(primary);
@@ -14,6 +19,10 @@ button{
 			&:hover {
 				color: color(light);
 				background-color: darken($color: color(primary), $amount: 10);
+			}
+
+			svg {
+				stroke: color(light);
 			}
 		}
 
